<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/dark_back"
            app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/none"
                android:elevation="0dp"
                app:elevation="0dp">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:background="@color/none"
                    android:elevation="0dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_baseline_person_pin_24"
                        android:layout_gravity="end"/>
                </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/day"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/hello_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/hello"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hello_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/ankit_ram_nag"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/rank_card"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="178dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rank1_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:maxWidth="150dp"
                    android:layout_height="160dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hurray"
                        android:textColor="@color/red_200"
                        android:textStyle="bold"
                        android:textSize="28sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rank #"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" Steps"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@raw/rank1"
                    android:layout_margin="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View all"
                    android:textColor="@color/red_700"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="15dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rank_card"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_stats"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/red_200"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:text="@string/heart_pts" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:text="@string/calories" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:text="0" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:text="@string/sleep" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/chat_drawable"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="25dp">

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>